appdeploy.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: jboss-sms-yaml
  spec:
    ports:
      - name: 8080-tcp
        port: 8080
        protocol: TCP
        targetPort: 8080
      - name: 8443-tcp
        port: 8443
        protocol: TCP
        targetPort: 8443
      - name: 8778-tcp
        port: 8778
        protocol: TCP
        targetPort: 8778
    selector:
      deploymentconfig: jboss-sms-yaml
    sessionAffinity: None
    type: ClusterIP
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: jboss-sms-yaml
    name: jboss-sms-yaml
  spec:
    replicas: 1
    selector:
      app: jboss-sms-yaml
      deploymentconfig: jboss-sms-yaml
    strategy:
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        labels:
          app: jboss-sms-yaml
          deploymentconfig: jboss-sms-yaml
      spec:
        containers:
          - env:
              - name: JAVA_OPTS_APPEND
                value: '-Djavax.net.ssl.trustStore=/etc/eap-keystore/truststore.jks'
            image: >-
              docker-registry.default.svc:5000/testsmsgw/jboss-sms2:latest
            imagePullPolicy: Always
            name: jboss-sms-yaml
            ports:
              - containerPort: 8080
                protocol: TCP
              - containerPort: 8443
                protocol: TCP
              - containerPort: 8778
                protocol: TCP
            resources: {}
            terminationMessagePath: /dev/termination-log
            terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
      - imageChangeParams:
          automatic: true
          containerNames:
            - jboss-sms-yaml
          from:
            kind: ImageStreamTag
            name: 'jboss-sms2:latest'
            namespace: testsmsgw
          lastTriggeredImage: >-
            docker-registry.default.svc:5000/testsmsgw/jboss-sms2:latest
        type: ImageChange
      - type: ConfigChange
- apiVersion: v1
  kind: Route
  metadata:
    name:  jboss-sms-yaml
  spec:
    host: smsg
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: jboss-sms-yaml
